--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -55,6 +55,10 @@ input, textarea, select, .uneditable-input {
   }
 }
 
+/* dropdown menu */
+.dropdown-menu.active {
+  display: block;
+}
 
 /* universal */
 body {
@@ -110,6 +114,23 @@ body {
       li {
         float: left;
         margin-left: 15px;
+      }
+    }
+  }
+  @media (max-width: 800px) {
+    footer {
+      small {
+        display: block;
+        float: none;
+        margin-bottom: 1em;
+      }
+      ul {
+        float: none;
+        padding: 0;
+        li {
+          float: none;
+          margin-left: 0;
+        }
       }
     }
   }
