--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,8 @@
               <li><%= link_to 'Settings', '#' %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to 'Log out', logout_path, data: { 'turbo-method': :delete } %>
+                <%= link_to 'Log out', logout_path,
+                  data: { 'turbo-method': :delete } %>
               </li>
             </ul>
           </li>
