--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,3 +8,14 @@
 
   <%= f.submit yield(:button_text), class: 'btn btn-primary' %>
 <% end %>
+
+<%#=
+  app/models/user.rb   user
+  app/controllers/sessions_controller.rb  ns_c
+  app/controllers/users_controller.rb     rs_c
+  app/helpers/sessions_helper.rb          ns_h
+
+  app/views/users/edit.html.erb           u/e
+  app/views/layouts/_header.html.erb      _h
+  app/views/users/_form.html.erb          _f
+%>
