--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,3 +12,12 @@
     </div>
   </div>
 </div>
+
+<%#=
+  app/models/user.rb   user
+  app/controllers/sessions_controller.rb  ns_c
+  app/controllers/users_controller.rb     rs_c
+  app/helpers/sessions_helper.rb          ns_h
+
+  app/views/users/edit.html.erb           u/e
+%>
