--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -201,18 +201,49 @@ body {
   }
 }
 
-// app/models/user.rb   user
-// app/controllers/sessions_controller.rb  ns_c
-// app/controllers/users_controller.rb     rs_c
-// app/helpers/sessions_helper.rb          ns_h
-// app/helpers/users_helper.rb             rs_h
+/* micrposts */
 
-// app/views/users/edit.html.erb           u/e
-// app/views/users/new.html.erb			u/n
-// app/views/users/index.html.erb			u/i
-// app/views/users/_form.html.erb          _f
-// app/views/layouts/_header.html.erb      _h
-// app/views/layouts/_user.html.erb        _u
+.microposts {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+  .user {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .content {
+    display: block;
+    margin-left: 60px;
+    img {
+      display: block;
+      padding: 5px 0;
+    }
+  }
+  .timestamp {
+    color: lightgray;
+    display: block;
+    margin-left: 60px;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+}
 
-// app/assets/stylesheets/custom.scss		custom
-// app/javascript/custom/menu.js		    menu
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
+span.image {
+  margin-top: 10px;
+  input {
+    border: 0;
+  }
+}
