--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @user) do |f| %>
-  <%= render 'shared/error_messages', object: @user %>
+  <%= render 'shared/error_messages', object: f.object %>
   <%= f.label :name %><%= f.text_field :name, class: 'form-control' %>
   <%= f.label :email %><%= f.email_field :email, class: 'form-control' %>
   <%= f.label :password %><%= f.text_field :password, class: 'form-control' %>
@@ -8,14 +8,3 @@
 
   <%= f.submit yield(:button_text), class: 'btn btn-primary' %>
 <% end %>
-
-<%#=
-  app/models/user.rb   user
-  app/controllers/sessions_controller.rb  ns_c
-  app/controllers/users_controller.rb     rs_c
-  app/helpers/sessions_helper.rb          ns_h
-
-  app/views/users/edit.html.erb           u/e
-  app/views/layouts/_header.html.erb      _h
-  app/views/users/_form.html.erb          _f
-%>
